--- a/cf/test_deepctr_multivalue_input.ipynb
+++ b/cf/test_deepctr_multivalue_input.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/aoi/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -17,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +130,7 @@
        "4        1     2355       5  978824291"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +236,7 @@
        "4        5      M   25          20  55455"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +330,7 @@
        "4        5  Father of the Bride Part II (1995)                        Comedy"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +465,7 @@
        "4  One Flew Over the Cuckoo's Nest (1975)  Drama  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -481,8 +490,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 1.Label Encoding for sparse features,and process sequence features\n",
@@ -493,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -510,8 +521,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 2.count #unique features for each sparse field and generate feature config for sequence feature\n",
@@ -528,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -551,25 +564,25 @@
       "cpu\n",
       "Train on 800167 samples, validate on 200042 samples, 3126 steps per epoch\n",
       "Epoch 1/10\n",
-      "131s - loss:  0.9567 - mse:  0.9567 - val_mse:  1.2218\n",
+      "122s - loss:  0.9810 - mse:  0.9809 - val_mse:  1.2130\n",
       "Epoch 2/10\n",
-      "106s - loss:  0.8266 - mse:  0.8266 - val_mse:  1.2220\n",
+      "111s - loss:  0.8265 - mse:  0.8265 - val_mse:  1.2069\n",
       "Epoch 3/10\n",
-      "111s - loss:  0.8136 - mse:  0.8136 - val_mse:  1.2125\n",
+      "115s - loss:  0.8133 - mse:  0.8133 - val_mse:  1.2109\n",
       "Epoch 4/10\n",
-      "110s - loss:  0.8003 - mse:  0.8003 - val_mse:  1.2244\n",
+      "112s - loss:  0.8027 - mse:  0.8027 - val_mse:  1.2238\n",
       "Epoch 5/10\n",
-      "104s - loss:  0.7749 - mse:  0.7749 - val_mse:  1.2128\n",
+      "254s - loss:  0.7876 - mse:  0.7876 - val_mse:  1.2119\n",
       "Epoch 6/10\n",
-      "3155s - loss:  0.7342 - mse:  0.7342 - val_mse:  1.1970\n",
+      "114s - loss:  0.7585 - mse:  0.7585 - val_mse:  1.2056\n",
       "Epoch 7/10\n",
-      "355s - loss:  0.7093 - mse:  0.7093 - val_mse:  1.2430\n",
+      "112s - loss:  0.7277 - mse:  0.7277 - val_mse:  1.1995\n",
       "Epoch 8/10\n",
-      "104s - loss:  0.6905 - mse:  0.6905 - val_mse:  1.2181\n",
+      "113s - loss:  0.7065 - mse:  0.7065 - val_mse:  1.2073\n",
       "Epoch 9/10\n",
-      "163s - loss:  0.6751 - mse:  0.6751 - val_mse:  1.2046\n",
+      "113s - loss:  0.6898 - mse:  0.6898 - val_mse:  1.2024\n",
       "Epoch 10/10\n",
-      "104s - loss:  0.6641 - mse:  0.6641 - val_mse:  1.2164\n"
+      "109s - loss:  0.6762 - mse:  0.6762 - val_mse:  1.2158\n"
      ]
     }
    ],
